syntax = "proto2";

package proto;

message Storage {
  required int32 current_term = 1;
  required int32 voted_for = 2;
  repeated string log = 3;
}
